Added a build file. And added a references article on the Portfolio.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
 				<li>Svn</li>
 			</ol>
 			<p>And many more..</p>
+			</article>
+
+
+		<article>
+			<h1>Used tools for this portfolio</h1>
+			<ul>
+				<li><a href="http://necolas.github.com/normalize.css/"> normalize.css </a></li>
+				<li><a href="http://webdesign.tutsplus.com/tutorials/site-elements/responsive-retinafied-google-map-images/"> Inspiration for my diving Google Maps header. </a></li>
+			</ul>
 		</article>
 	</section>
 
